<resources>
    <string name="app_name">Измерение</string>
    <string name="mno_info_open_details">Подробнее</string>
    <string name="mno_info_containers_title">Ёмкости на объекте</string>
    <string name="mno_info_retry">Повторить</string>
    <string name="mno_info_load_error">Ошибка загрузки</string>
    <string name="mno_info_pieces">%d шт.</string>

    <plurals name="mno_info_measurement_count">
        <item quantity="zero">%d замеров</item>
        <item quantity="one">%d замер</item>
        <item quantity="few">%d замера</item>
        <item quantity="many">%d замеров</item>
        <item quantity="other">%d замеров</item>
    </plurals>
    <string name="bottom_navigation_map">Карта МНО</string>
    <string name="bottom_navigation_mno_list">Список МНО</string>
    <string name="bottom_navigation_measurements">Замеры</string>
    <string name="bottom_navigation_settings">Настройки</string>

    <string name="mno_map_title">Карта МНО</string>
    <string name="mno_map_search_hint">Поиск МНО</string>

    <string name="measurement_list_title">Список замеров</string>
    <string name="measurement_list_empty_title">Список замеров пуст</string>
    <string name="measurement_list_search_hint">Поиск замера</string>
    <string name="measurement_item_availability_title">Наличие возможности проведения замера</string>
    <string name="measurement_item_available">Да</string>
    <string name="measurement_item_not_available">Нет</string>
    <string name="measurement_item_created_date_title">Замер проведен</string>
    <string name="measurement_item_status_title">Статус</string>

    <string name="filter_category_title">Категория источника образования отходов</string>
    <string name="filter_category_hint">Выберите категорию</string>
    <string name="filter_source_title">Источник образования отходов</string>
    <string name="filter_source_hint">Выберите источник</string>

    <string name="measurement_details_update_measurement">Изменить карточку замера</string>
    <string name="measurement_details_save_measurement_update">Сохранить изменения</string>
    <string name="measurement_details_title">Карточка замера</string>
    <string name="measurement_details_confirm_info_title">Подтвердите информацию</string>
    <string name="measurement_details_info_title">Информация о замере</string>
    <string name="measurement_details_measurement_id_label">Идентификатор замера</string>
    <string name="measurement_details_coordinates_label">Координаты</string>
    <string name="measurement_details_season_label">Сезон</string>
    <string name="measurement_details_date_time_label">Дата и время</string>
    <string name="measurement_details_containers_title">Информация о ёмкостях</string>
    <string name="measurement_details_container_label">Ёмкость</string>
    <string name="measurement_details_container_name_label">Наименование</string>
    <string name="measurement_details_container_type_label">Тип</string>
    <string name="measurement_details_container_volume_label">Объём ёмкости</string>
    <string name="measurement_details_container_volume_value">%s м3</string>
    <string name="measurement_details_container_fullness_label">Наполненность</string>
    <string name="measurement_details_container_fullness_value">%s %%</string>
    <string name="measurement_details_container_empty_weight_title">Масса порожней ёмкости</string>
    <string name="measurement_details_container_filled_weight_title">Масса заполненной ёмкости</string>
    <string name="measurement_details_container_waste_title">Отходы</string>
    <string name="measurement_details_container_net_weight_label">Масса нетто отходов</string>
    <string name="measurement_details_container_weight_value">%s кг</string>
    <string name="measurement_details_container_waste_volume_label">Объём отходов</string>
    <string name="measurement_details_container_daily_gain_volume_label">Суточный прирост массы отходов нетто</string>
    <string name="measurement_details_container_daily_gain_net_weight_label">Суточный прирост объёма отходов</string>
    <string name="measurement_details_container_waste_type_label">Тип отходов</string>
    <string name="measurement_details_photo_label">Фото объекта</string>
    <string name="measurement_details_video_label">Видео объекта</string>
    <string name="measurement_details_act_photo_label">Фото подписанного акта замера</string>
    <string name="measurement_details_comment">Комментарий</string>
    <string name="measurement_details_revision_comment">Комментарий модератора</string>

    <string name="measurement_sort_status">По статусу</string>
    <string name="measurement_sort_created_at">По дате</string>
    <string name="measurement_information_about_containers">Информация о ёмкостях</string>
    <string name="measurement_availability_title">Возможно ли провести замер?</string>
    <string name="measurement_create_card">Создать карточку замера</string>
    <string name="measurement_finish">Завершить</string>
    <string name="measurement_hold_measure">Проведение замера</string>
    <string name="measurement_new_card_measure">Новая карточка замера</string>
    <string name="measurement_edit_measure">Редактирование замера</string>
    <string name="measurement_commentary">Коментарий</string>
    <string name="measurement_add_photo">Сделать фото объекта</string>
    <string name="measurement_add_video">Сделать видео объекта</string>
    <string name="measurement_add_document">Фото подписанного акта объекта</string>
    <string name="measurement_reason_hint">Укажите причину</string>
    <string name="measurement_leave_comment">Оставьте комментарий</string>
    <string name="measurement_containers_list_title">Ёмкости на объекте</string>
    <string name="measurement_morphology_list_title">Сведения о морфологии ТКО</string>
    <string name="measurement_add_container">Добавить ёмкость</string>
    <string name="measurement_edit_morphology">Изменить информацию о морфологии</string>
    <string name="measurement_add_morphology">Добавить информацию о морфологии</string>
    <string name="measurement_back">Назад</string>
    <string name="measurement_forward">Далее</string>
    <string name="measurement_download_media">Загрузить</string>
    <string name="measurement_add_container_title">Добавление ёмкости</string>
    <string name="measurement_new_container_button">Новая ёмкость</string>
    <string name="measurement_container_type_title">Тип ёмкости</string>
    <string name="measurement_select_from_registry_hint">Выберите ёмкость</string>
    <string name="measurement_incorrect_gain_values">Сумма приростов объёма и массы по морфологическим категориям не должна превышать сумму приростов объёма и массы по контейнерам</string>
    <string name="add_container_choose_container_type">Выберите тип ёмкости</string>
    <string name="edit_mixed_container_fill_in_hint">Введите информацию</string>
    <string name="edit_mixed_container_edit_mode_title">Изменение ёмкости</string>
    <string name="edit_mixed_container_container_name_title">Наименование ёмкости</string>
    <string name="edit_mixed_container_container_name_hint">Введите наименование ёмкости</string>
    <string name="edit_mixed_container_waste_parameters">Параметры отходов</string>
    <string name="edit_mixed_container_fullness_title">Наполненность ёмкости (%)</string>
    <string name="edit_mixed_container_fullness_hint">Укажите процент заполненности</string>
    <string name="edit_mixed_container_empty_weight_title">Масса порожней ёмкости (кг)</string>
    <string name="edit_mixed_container_weight_hint">Укажите массу</string>
    <string name="edit_mixed_container_filled_weight_title">Масса заполненной ёмкости (кг)</string>
    <string name="edit_mixed_container_waste_weight_title">Масса отходов ёмкости нетто (кг)</string>
    <string name="edit_mixed_container_auto_fill">Формируется автоматически</string>
    <string name="edit_mixed_container_waste_daily_weight_title">Суточный прирост массы отходов нетто (кг)</string>
    <string name="edit_mixed_container_weight_netto_hint">Укажите массу нетто</string>
    <string name="edit_mixed_container_waste_volume_title">Объём отходов (м3)</string>
    <string name="edit_mixed_container_waste_volume_hint">Укажите объём отходов</string>
    <string name="edit_mixed_container_volume_daily_title">Суточный прирост объёма отходов (м3)</string>
    <string name="edit_mixed_container_volume_daily_hint">Укажите объём</string>
    <string name="edit_mixed_container_volume_title">Объём ёмкости (м3)</string>
    <string name="edit_mixed_container_volume_hint">Введите объём</string>
    <string name="edit_mixed_container_save_container">Сохранить</string>
    <string name="edit_separate_container_waste_types">Типы отходов</string>
    <string name="edit_separate_container_add_waste_types">Добавить тип отходов</string>
    <string name="edit_waste_type_edit_mode_title">Изменить тип отходов</string>
    <string name="edit_waste_type_new_waste_type_title">Новый тип отходов</string>
    <string name="edit_waste_type_category_title">Тип отходов</string>
    <string name="edit_waste_group_title">Группа отходов</string>
    <string name="edit_waste_subgroup_title">Подгруппа отходов</string>
    <string name="edit_waste_type_add_waste_category_hint">Укажите тип отходов</string>
    <string name="edit_waste_type_add_waste_group_hint">Укажите группу отходов</string>
    <string name="edit_waste_type_add_waste_subgroup_hint">Укажите подгруппу отходов</string>
    <string name="edit_waste_type_name_other_category_title">Наименование иного типа отходов</string>
    <string name="edit_morphology_add_category">Добавить морфологическую категорию</string>
    <string name="edit_morphology_add_category_title">Добавление категории</string>
    <string name="edit_morphology_change_category_title">Изменение категории</string>
    <string name="edit_morphology_waste_categories">Категории отходов</string>
    <string name="edit_morphology_waste_categories_empty_title">Список категорий отходов пуст</string>
    <string name="dispose_measurement_dialog_leave">Выйти</string>
    <string name="dispose_measurement_dialog_stay">Отмена</string>
    <string name="dispose_measurement_dialog_message">Данные не будут сохранены. Чтобы их оставить сохраните замер.</string>
    <string name="dispose_measurement_dialog_title">Вы действительно хотите выйти?</string>
    <string name="geo_data_request_dialog_message">Геоданные нужны при создании фото и видео, а также для отправки замера.</string>
    <string name="geo_data_request_dialog_message_photo_creation">Геоданные нужны для определения геопозиции сделанной фотографии</string>

    <string name="measurement_form_empty_error">Поле не заполнено</string>
    <string name="measurement_form_waste_volume_min_error">Значение должно быть >= суточного прироста объема отходов</string>
    <string name="measurement_form_waste_weight_min_error">Значение должно быть >= суточного прироста массы отходов нетто</string>
    <string name="measurement_form_waste_daily_weight_min_error">Значение должно быть > 0, тк. суточный прирост объема отходов > 0</string>
    <string name="measurement_form_waste_daily_volume_min_error">Значение должно быть > 0, тк. суточный прирост массы отходов нетто > 0</string>
</resources>